--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+} 
+main {
+  padding: 24px;
+}
+
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -7,6 +15,14 @@
 body {
   background-image: url(assets/bg-image.jpg);
   background-size: cover;
+}
+
+#abount p + p {
+  margin-top: 12px;
+}
+
+section + section {
+  margin-top: 24px;
 }
 
 #page {
@@ -26,12 +42,19 @@ img {
 h1 {
   line-height: 140%;
   font-size: 40px;
+  
 }
 
 h2 {
   font-size: 24px;
 }
 
-h1 h2 {
+ul {
+  margin-left: 24px;
+}
+
+h1,h2 {
   color: black;
+  margin-bottom: 4px;
+  line-height: 150%;
 }
