--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section + section {
 
 #page {
   width: 800px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
   border-radius: 24px;
   background-color: #f0e8c2;
   padding: 24px;
@@ -57,4 +57,14 @@ h1,h2 {
   color: black;
   margin-bottom: 4px;
   line-height: 150%;
+}
+
+footer {
+  color: #573a37;
+  padding-bottom: 48px;
+  text-align: center;
+}
+
+footer img {
+  vertical-align: middle;
 }
